Solucion errores sonar